--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                                 <div class="swiper-slide-txt-inner">
                                                     <!-- page subtitle start -->
                                                     <h4 class="post-heading post-heading-all post-heading-slide">
-                                                        The Brand
+                                                        dzulu.com
                                                     </h4><!-- page subtitle end -->
                                                     <!-- divider start -->
                                                     <div class="inner-divider-half"></div><!-- divider end -->
