--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Lorem Ipsum has been the industry's standard dummy text ever <a class="link-underline" href="#">since the 1500s</a>.
+                                                        Bringing a crypto friendly community to the <a class="link-underline" href="#">ATV/UTV industry</a>.
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
