--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Lorem Ipsum has been the industry's standard dummy text ever <a class="link-underline" href="#">since the 1500s</a>.
+                                                        A new NFT marketplace coming soon <a class="link-underline" href="#">(under construction)</a>.
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
