--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
             <div class="social-icons">
                 <ul>
                     <li>
-                        <a class="ion-social-twitter" href="#"><span>Twitter</span></a>
+                        <a class="ion-social-twitter" href="https://twitter.com/wwwdz49?lang=en"><span>Twitter</span></a>
                     </li>
                     <li>
-                        <a class="ion-social-facebook" href="#"><span>Facebook</span></a>
+                        <a class="ion-social-facebook" href="https://www.facebook.com/dillon.zommerman.7"><span>Facebook</span></a>
                     </li>
                     <li>
-                        <a class="ion-social-instagram" href="#"><span>Instagram</span></a>
+                        <a class="ion-social-instagram" href="https://www.instagram.com/dz49/?hl=en"><span>Instagram</span></a>
                     </li>
                 </ul>
             </div><!-- social icons end -->
