--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        A new powdercoating source in <a class="link-underline" href="#">new mexico</a>.
+                                                        All new powdercoating source in Socorro<a class="link-underline" href="#">new mexico</a>.
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
