--- a/index.html
+++ b/index.html
@@ -343,14 +343,19 @@
                                 <!-- divider start -->
                                 <div class="inner-divider-large"></div><!-- divider end -->
                                 <!-- owl nav start -->
-                                <div class="owl-nav owl-nav-custom-about"></div><!-- owl nav end -->
+                                <div class="owl-nav owl-nav-custom-about"><div class="owl-prev"><i class="owl-custom ion-chevron-left"></i></div><div class="owl-prev"><i class="owl-custom ion-chevron-left"></i></div><div class="owl-next"><i class="owl-custom ion-chevron-right"></i></div><div class="owl-next"><i class="owl-custom ion-chevron-right"></i></div></div><!-- owl nav end -->
                             </div><!-- col end -->
                             <!-- col start -->
                             <div class="col-md-9 the-first-lift">
                                 <!-- post carousel start -->
-                                <div class="owl-carousel" id="about-carousel">
+                                <div class="owl-carousel owl-loaded owl-drag" id="about-carousel">
                                     <!-- post block start -->
-                                    <div class="post-block-second">
+                                    <!-- post block end -->
+                                    <!-- post block start -->
+                                    <!-- post block end -->
+                                    <!-- post block start -->
+                                    <!-- post block end -->
+                                <div class="owl-stage-outer owl-height" style="height: 0px;"><div class="owl-stage" style="transform: translate3d(0px, 0px, 0px); transition: all 0s ease 0s;"><div class="owl-item"><div class="owl-stage-outer owl-height" style="height: 0px;"><div class="owl-stage" style="transform: translate3d(0px, 0px, 0px); transition: all 0s ease 0s;"><div class="owl-item"><div class="post-block-second">
                                         <!-- mobile divider start -->
                                         <div class="inner-divider-mobile"></div><!-- mobile divider end -->
                                         <!-- col start -->
@@ -480,9 +485,7 @@
                                                 </div>
                                             </div><!-- post item 2 end -->
                                         </div><!-- col end -->
-                                    </div><!-- post block end -->
-                                    <!-- post block start -->
-                                    <div class="post-block-second">
+                                    </div></div><div class="owl-item"><div class="post-block-second">
                                         <!-- mobile divider start -->
                                         <div class="inner-divider-mobile"></div><!-- mobile divider end -->
                                         <!-- col start -->
@@ -533,8 +536,7 @@
                                                     <div class="hover-effect"></div><!-- hover effect end -->
                                                     <!-- icon effect start -->
                                                     <div class="icon-effect">
-                                                        <a class="iw-slide-left ion-social-twitter" href="#"></a> <a class="ion-social-facebook" href="#"></a> <a class=
-                                                        "iw-slide-right ion-social-instagram" href="#"></a>
+                                                        <a class="iw-slide-left ion-social-twitter" href="#"></a> <a class="ion-social-facebook" href="#"></a> <a class="iw-slide-right ion-social-instagram" href="#"></a>
                                                     </div><!-- icon effect end -->
                                                 </div><!-- post box end -->
                                                 <!-- divider start -->
@@ -551,9 +553,7 @@
                                                 </div><!-- page title end -->
                                             </div><!-- post item IMG 1 end -->
                                         </div><!-- col end -->
-                                    </div><!-- post block end -->
-                                    <!-- post block start -->
-                                    <div class="post-block-second">
+                                    </div></div><div class="owl-item"><div class="post-block-second">
                                         <!-- mobile divider start -->
                                         <div class="inner-divider-mobile"></div><!-- mobile divider end -->
                                         <!-- col start -->
@@ -566,8 +566,7 @@
                                                     <div class="hover-effect"></div><!-- hover effect end -->
                                                     <!-- icon effect start -->
                                                     <div class="icon-effect">
-                                                        <a class="iw-slide-left ion-social-twitter" href="#"></a> <a class="ion-social-facebook" href="#"></a> <a class=
-                                                        "iw-slide-right ion-social-instagram" href="#"></a>
+                                                        <a class="iw-slide-left ion-social-twitter" href="#"></a> <a class="ion-social-facebook" href="#"></a> <a class="iw-slide-right ion-social-instagram" href="#"></a>
                                                     </div><!-- icon effect end -->
                                                 </div><!-- post box end -->
                                                 <!-- divider start -->
@@ -596,8 +595,7 @@
                                                     <div class="hover-effect"></div><!-- hover effect end -->
                                                     <!-- icon effect start -->
                                                     <div class="icon-effect">
-                                                        <a class="iw-slide-left ion-social-twitter" href="#"></a> <a class="ion-social-facebook" href="#"></a> <a class=
-                                                        "iw-slide-right ion-social-instagram" href="#"></a>
+                                                        <a class="iw-slide-left ion-social-twitter" href="#"></a> <a class="ion-social-facebook" href="#"></a> <a class="iw-slide-right ion-social-instagram" href="#"></a>
                                                     </div><!-- icon effect end -->
                                                 </div><!-- post box end -->
                                                 <!-- divider start -->
@@ -614,8 +612,7 @@
                                                 </div><!-- page title end -->
                                             </div><!-- post item IMG 3 end -->
                                         </div><!-- col end -->
-                                    </div><!-- post block end -->
-                                </div><!-- post carousel end -->
+                                    </div></div></div></div></div><div class="owl-item"><div class="owl-dots"><div class="owl-dot active"><span></span></div><div class="owl-dot"><span></span></div><div class="owl-dot"><span></span></div></div></div></div></div><div class="owl-dots"><div class="owl-dot active"><span></span></div><div class="owl-dot"><span></span></div></div></div><!-- post carousel end -->
                             </div><!-- col end -->
                         </div><!-- row end -->
                         <!-- mobile divider start -->
