--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                 <div class="inner-divider-half"></div><!-- divider end -->
                                 <!-- page subtitle start -->
                                 <h2 class="section-heading">
-                                    <span>01.</span> Inspiring Generations
+                                    <span>01.</span> Inspiring Generations Ahead
                                 </h2><!-- page subtitle end -->
                                 <!-- divider start -->
                                 <div class="inner-divider-large"></div><!-- divider end -->
