--- a/index.html
+++ b/index.html
@@ -388,7 +388,17 @@
                                                         <!-- page TXT start -->
                                                         <p>
                                                             <a class="link-underline" href="#">DZ49</a> A link tree website. 
-     believe that businesses have a responsibility to make a positive impact on society, and i have many ideas i plan to implement in my small community as my 
+     <p>
+                                                           <a class="link-underline" href="#">DZ49</a> A link tree website. 
+    Since a young age i have always been fascinated by the idea of creating something from nothing and turning it into a sucessful venture. From a younge age i was always coming up with new business ideas &amp; strategies to make them a reality. Some failed &amp; some are still generating additional income for me and my family.
+    <br>
+    After years of racing motocross professionally, i decided to pursue my passion &amp; turn my attention torwards entrepreneurship. It was a challenging journey, but the experience taught me valuable lessions that have helped me in my subsequent ventures. Over the years, i have started to run several successful businessess in different industries, including the racing industry, e-commerce &amp; more. 
+    <br>
+    One thing that motivates me is the oppoptunity to solve problems and create a value for potential customers. Whether it's developing a new website that suites each customers business requirements, or powder coating a customers wheels, i am always looking for ways to make a positive impact. 
+    <br>
+    Another thing that drives me is the opportunity to give back to the community. I believe that businesses have a responsibility to make a positive impact on society, and i have many ideas i plan to implement in my small community as my businesses evolve over the years. 
+    <br>
+    Thank you for taking the time to read my about DZ49 page. If you have any questions or would like to contact me, please feel free to reach out. I look forward to hearing from you!
                                                             </p><!-- page TXT end -->
                                                     </div><!-- post txt end -->
                                                 </div>
