--- a/index.html
+++ b/index.html
@@ -387,7 +387,8 @@
                                                         <div class="inner-divider"></div><!-- divider end -->
                                                         <!-- page TXT start -->
                                                             <a class="link-underline" href="#">DZ49</a> A link tree website. 
-     <p><a class="link-underline" href="#">DZ49</a> A link tree website. 
+    <p>
+             <a class="link-underline" href="#">DZ49</a> A link tree website. 
     Since a young age i have always been fascinated by the idea of creating something from nothing and turning it into a sucessful venture. From a younge age i was always coming up with new business ideas &amp; strategies to make them a reality. Some failed &amp; some are still generating additional income for me and my family.
     <br>
     After years of racing motocross professionally, i decided to pursue my passion &amp; turn my attention torwards entrepreneurship. It was a challenging journey, but the experience taught me valuable lessions that have helped me in my subsequent ventures. Over the years, i have started to run several successful businessess in different industries, including the racing industry, e-commerce &amp; more. 
