--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                 <a class="link-underline-menu active" href="#home">Home</a>
                             </li>
                             <li>
-                                <a class="link-underline-menu" href="#about">About</a>
+                                <a class="link-underline-menu" href="#">About</a>
                             </li>
                             <li>
                                 <a class="link-underline-menu" href="#services">Services</a>
