--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                                                         <!-- page TXT start -->
                                                         <div class="section-intro">
                                                             <p>
-                                                                <span>Lorem Ipsum</span> is simply dummy text of the printing and typesetting industry.
+                                                                <span>Lorem sd Ipsum</span> is simply dummy text of the printing and typesetting industry.
                                                             </p>
                                                         </div><!-- page TXT end -->
                                                         <!-- divider start -->
