--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                                                         <div class="inner-divider"></div><!-- divider end -->
                                                         <!-- page TXT start -->
                                                         <p>
-                                                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
+                                                            Lorem asdfIpsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
                                                             <a class="link-underline" href="#">since the 1500s</a>.
                                                         </p><!-- page TXT end -->
                                                     </div><!-- post txt end -->
