--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
             <div class="social-icons">
                 <ul>
                     <li>
-                        <a class="ion-social-twitter" href="#"><span>Twitter</span></a>
+                        <a class="ion-social-twitter" href="https://twitter.com/wwwdz49?lang=en"><span>Twitter</span></a>
                     </li>
                     <li>
-                        <a class="ion-social-facebook" href="#"><span>Facebook</span></a>
+                        <a class="ion-social-facebook" href="https://www.facebook.com/dillonzimmerman.7"><span>Facebook</span></a>
                     </li>
                     <li>
-                        <a class="ion-social-instagram" href="#"><span>Instagram</span></a>
+                        <a class="ion-social-instagram" href="https://www.instagram.com/dz49/?hl=en"><span>Instagram</span></a>
                     </li>
                 </ul>
             </div><!-- social icons end -->
@@ -91,11 +91,11 @@
             <div class="bottom-credits">
                 <!-- page subtitle start -->
                 <h4 class="bottom-credits-lead bottom-credits-first">
-                    (+1) 234 56 789
+                    2023 ALL RIGHTS RESERVED | DZ49
                 </h4><!-- page subtitle end -->
                 <!-- page subtitle start -->
                 <h4 class="bottom-credits-lead bottom-credits-lead-color">
-                    <a href="mailto:ultimex@ultimex.com">ultimex@ultimex.com</a>
+                    <a href="mailto:ask@dz49.com">ask@dz49.com</a>
                 </h4><!-- page subtitle end -->
             </div><!-- bottom credits end -->
             <!-- overlay start -->
