--- a/index.html
+++ b/index.html
@@ -324,15 +324,14 @@
                                                         <!-- page TXT start -->
                                                         <div class="section-intro">
                                                             <p>
-                                                                <span>Lorem Ipsum</span> is simply dummy text of the printing and typesetting industry.
+                                                                <span>Entrepreneurship</span> the process of discovering new ways of combining resources.
                                                             </p>
                                                         </div><!-- page TXT end -->
                                                         <!-- divider start -->
                                                         <div class="inner-divider"></div><!-- divider end -->
                                                         <!-- page TXT start -->
                                                         <p>
-                                                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
-                                                            <a class="link-underline" href="#">since the 1500s</a>.
+                                                            I am DZ49, a passionate and driven individual. I started my own business after completing my racing career and have gained valuable experience and knowledge along the way. With a focus on collaboration and teamwork, my team and I strive for excellence and customer satisfaction everyday. I am committed to continuous learning and growth to stay competitive in the market. Thank you for taking the time to learn about me!
                                                         </p><!-- page TXT end -->
                                                     </div><!-- post txt end -->
                                                 </div>
