--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                                                                 <div class="inner-divider-half"></div><!-- divider end -->
                                                                 <!-- page subtitle start -->
                                                                 <h2 class="facts-bottom">
-                                                                    Years in business
+                                                                    Years
                                                                 </h2><!-- page subtitle end -->
                                                             </div><!-- facts end -->
                                                         </div><!-- col end -->
