--- a/index.html
+++ b/index.html
@@ -488,13 +488,13 @@
                                                 <div class="inner-divider-ultra-half"></div><!-- divider end -->
                                                 <!-- page subtitle start -->
                                                 <h4 class="post-heading post-heading-all post-heading-all-lead">
-                                                    Chief Photographer
+                                                    Contact Me
                                                 </h4><!-- page subtitle end -->
                                                 <!-- divider start -->
                                                 <div class="inner-divider-ultra-half"></div><!-- divider end -->
                                                 <!-- page title start -->
                                                 <div class="post-title post-title-team">
-                                                    C. Eastwood
+                                                    DZ49
                                                 </div><!-- page title end -->
                                             </div><!-- post item IMG 1 end -->
                                         </div><!-- col end -->
