--- a/index.html
+++ b/index.html
@@ -1575,7 +1575,7 @@
                                                         <!-- page TXT start -->
                                                         <div class="section-intro">
                                                             <p>
-                                                                <span>Have an idea</span> or a project in mind? By all means, please feel free to send us a message.
+                                                                <span>Have an idea</span> or a project in mind? By all means, please feel free to send me a message.
                                                             </p>
                                                         </div><!-- page TXT end -->
                                                         <!-- divider start -->
@@ -1584,16 +1584,16 @@
                                                         <!-- bottom credits contact start -->
                                                         <div class="bottom-credits-contact">
                                                             <!-- page subtitle start -->
-                                                            <span class="bottom-credits-contact-lead bottom-credits-contact-first">ex Inc. Touchdown Dr 1176</span> <!-- page subtitle end -->
+                                                            <span class="bottom-credits-contact-lead bottom-credits-contact-first">1261NW Frontage rd, 87801</span> <!-- page subtitle end -->
                                                              <!-- page subtitle start -->
-                                                             <span class="bottom-credits-contact-lead bottom-credits-contact-first">(+1) 234 56 789</span> <!-- page subtitle end -->
+                                                             <span class="bottom-credits-contact-lead bottom-credits-contact-first">(505) 305-1305</span> <!-- page subtitle end -->
                                                              <!-- page subtitle start -->
-                                                             <span class="bottom-credits-contact-lead bottom-credits-contact-first"><a href="mailto:ultimex@ultimex.com">ultimex@ultimex.com</a></span>
+                                                             <span class="bottom-credits-contact-lead bottom-credits-contact-first"><a href="mailto:ask@dz49.com">ask@dz49.com</a></span>
                                                             <!-- page subtitle end -->
                                                              <!-- social icons start -->
-                                                             <span class="bottom-credits-contact-lead"><a class="ion-social-twitter ion-light" href="#"><span>Twitter</span></a> <a class=
-                                                            "ion-social-facebook ion-light" href="#"><span>Facebook</span></a> <a class="ion-social-instagram ion-light" href=
-                                                            "#"><span>Instagram</span></a></span> <!-- social icons end -->
+                                                             <span class="bottom-credits-contact-lead"><a class="ion-social-twitter ion-light" href="https://twitter.com/wwwdz49?lang=en"><span>Twitter</span></a> <a class=
+                                                            "ion-social-facebook ion-light" href="https://facebook.com/dillon.zimmerman7/"><span>Facebook</span></a> <a class="ion-social-instagram ion-light" href=
+                                                            "https://www.instagram.com/dz49/?hl=en"><span>Instagram</span></a></span> <!-- social icons end -->
                                                         </div><!-- bottom credits contact end -->
                                                         <!-- page TXT end -->
                                                     </div><!-- post txt end -->
