--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 <a class="link-underline-menu" href="#works">Works</a>
                             </li>
                             <li>
-                                <a class="link-underline-menu" href="#">News</a>
+                                <a class="link-underline-menu" href="#"></a>
                             </li>
                             <li>
                                 <a class="link-underline-menu" href="#contact">Contact</a>
