--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 <a class="link-underline-menu" href="#services">Services</a>
                             </li>
                             <li>
-                                <a class="link-underline-menu" href="#images">Images</a>
+                                <a class="link-underline-menu" href="#works">Images</a>
                             </li>
                           
                             <li>
