--- a/index.html
+++ b/index.html
@@ -519,13 +519,13 @@
                                                 <div class="inner-divider-ultra-half"></div><!-- divider end -->
                                                 <!-- page subtitle start -->
                                                 <h4 class="post-heading post-heading-all post-heading-all-lead">
-                                                    Advertising Photographer
+                                                    Socials
                                                 </h4><!-- page subtitle end -->
                                                 <!-- divider start -->
                                                 <div class="inner-divider-ultra-half"></div><!-- divider end -->
                                                 <!-- page title start -->
                                                 <div class="post-title post-title-team">
-                                                    M. Scorsese
+                                                    Geared2.com
                                                 </div><!-- page title end -->
                                             </div><!-- post item IMG 2 end -->
                                         </div><!-- col end -->
