--- a/index.html
+++ b/index.html
@@ -511,8 +511,8 @@
                                                     <div class="hover-effect"></div><!-- hover effect end -->
                                                     <!-- icon effect start -->
                                                     <div class="icon-effect">
-                                                        <a class="iw-slide-left ion-social-twitter" href="https://twitter.com/wwwdz49?lang=en"></a> <a class="ion-social-facebook" href="https://www.facebook.com/dillon.zimmerman.7/"></a> <a class=
-                                                        "iw-slide-right ion-social-instagram" href="https://www.instagram.com/dz49/?hl=en"></a>
+                                                        <a class="iw-slide-left ion-social-twitter" href="https://twitter.com/wwwdz49?lang=en"></a> <a class="ion-social-facebook" href="https://www.facebook.com/geared2/"></a> <a class=
+                                                        "iw-slide-right ion-social-instagram" href="https://www.instagram.com/geared.2/"></a>
                                                     </div><!-- icon effect end -->
                                                 </div><!-- post box end -->
                                                 <!-- divider start -->
@@ -549,13 +549,13 @@
                                                 <div class="inner-divider-ultra-half"></div><!-- divider end -->
                                                 <!-- page subtitle start -->
                                                 <h4 class="post-heading post-heading-all post-heading-all-lead">
-                                                    Editorial Photographer
+                                                    Socials
                                                 </h4><!-- page subtitle end -->
                                                 <!-- divider start -->
                                                 <div class="inner-divider-ultra-half"></div><!-- divider end -->
                                                 <!-- page title start -->
                                                 <div class="post-title post-title-team">
-                                                    W. Kar-wai
+                                                    DZULU.COM
                                                 </div><!-- page title end -->
                                             </div><!-- post item IMG 3 end -->
                                         </div><!-- col end -->
