--- a/index.html
+++ b/index.html
@@ -806,14 +806,14 @@
                                 <!-- page title start -->
                                 <div class="page-title-content page-title-all">
                                     <h1 class="post-title post-title-all-main-title">
-                                        Works
+                                        Images
                                     </h1>
                                 </div><!-- page title end -->
                                 <!-- divider start -->
                                 <div class="inner-divider-half"></div><!-- divider end -->
                                 <!-- page subtitle start -->
                                 <h2 class="section-heading">
-                                    <span>03.</span> Powerful Imagery
+                                    <span>03.</span> My Photography
                                 </h2><!-- page subtitle end -->
                                 <!-- divider start -->
                                 <div class="inner-divider-large"></div><!-- divider end -->
