--- a/index.html
+++ b/index.html
@@ -1664,15 +1664,15 @@
                                                         <!-- page TXT start -->
                                                         <div class="section-intro">
                                                             <p>
-                                                                <span>Lorem Ipsum</span> is simply dummy text of the printing and typesetting industry.
+                                                                <span>Conservative</span> business strategy.
                                                             </p>
                                                         </div><!-- page TXT end -->
                                                         <!-- divider start -->
                                                         <div class="inner-divider"></div><!-- divider end -->
                                                         <!-- page TXT start -->
                                                         <p>
-                                                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever
-                                                            <a class="link-underline" href="#">since the 1500s</a>.
+                                                            Not all agency services have a 10,000sf warehouse. I keep it simple, get comfortable and start coding your website from scratch. The convience of having an office at home keeps me working
+                                                            <a class="link-underline" href="#">24/7</a>.
                                                         </p><!-- page TXT end -->
                                                     </div><!-- post txt end -->
                                                 </div>
