--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
                                 <div class="inner-divider-half"></div><!-- divider end -->
                                 <!-- page subtitle start -->
                                 <h2 class="section-heading">
-                                    <span>03.</span> My Photography
+                                    <span>03.</span> Coming soon!
                                 </h2><!-- page subtitle end -->
                                 <!-- divider start -->
                                 <div class="inner-divider-large"></div><!-- divider end -->
