--- a/index.html
+++ b/index.html
@@ -26,6 +26,67 @@
                 </div>
             </div>
         </div><!-- preloader end -->
+        <!-- contact modal start -->
+        <div class="contact-modal">
+            <!-- container start -->
+            <div class="container">
+                <!-- center container start -->
+                <div class="center-container-contact-modal">
+                    <!-- center block start -->
+                    <div class="center-block-contact-modal">
+                        <!-- row start -->
+                        <div class="row center-block-contact-modal-padding-top">
+                            <h5>
+                                Get in touch
+                            </h5>
+                            <h4>
+                                Contact
+                            </h4>
+                        </div><!-- row end -->
+                        <!-- divider start -->
+                        <div class="inner-divider"></div><!-- divider end -->
+                        <!-- row start -->
+                        <div class="row contact-modal-wrapper center-block-contact-modal-padding-bottom">
+                            <!-- contact form content start -->
+                            <!-- contact form start -->
+                            <div id="contact-form">
+                                <form action="contact.php" id="form" method="post" name="send">
+                                    <!-- col start -->
+                                    <div class="col-sm-6 col-md-6 col-lg-6">
+                                        <input class="requiredField name" id="name" name="name" placeholder="Name" type="text">
+                                    </div><!-- col end -->
+                                    <!-- col start -->
+                                    <div class="col-sm-6 col-md-6 col-lg-6">
+                                        <input class="requiredField email" id="email" name="email" placeholder="Email" type="text">
+                                    </div><!-- col end -->
+                                    <!-- col start -->
+                                    <div class="make-space">
+                                        <input class="requiredField subject" id="subject" name="subject" placeholder="Subject" type="text">
+                                    </div><!-- col end -->
+                                    <!-- col start -->
+                                    <div class="make-space">
+                                        <textarea class="requiredField message" id="message" name="message" placeholder="Message"></textarea>
+                                    </div><!-- col end -->
+                                    <div>
+                                        <!-- button start -->
+                                        <div class="button-the-wrapper">
+                                            <button class="button-the button-the-submit" id="submit" type="submit"><span>Submit</span></button>
+                                        </div><!-- button end -->
+                                    </div>
+                                </form>
+                            </div><!-- divider start -->
+                            <div class="inner-divider"></div><!-- divider end -->
+                            <!-- contact modal closer start -->
+                            <div class="contact-modal-closer">
+                                <span class="ion-close"></span>
+                            </div><!-- contact modal closer end -->
+                            <!-- contact form end -->
+                            <!-- contact form content end -->
+                        </div><!-- row end -->
+                    </div><!-- center block end -->
+                </div><!-- center container end -->
+            </div><!-- container end -->
+        </div><!-- contact modal end -->
         <!-- navigation wrapper start -->
         <div class="navbar-wrapper"></div><!-- navigation wrapper end -->
         <!-- navigation start -->
