--- a/index.html
+++ b/index.html
@@ -1697,7 +1697,7 @@
                                                         <!-- page TXT start -->
                                                         <div class="section-intro">
                                                             <p>
-                                                                <a class="contact-modal-launcher"><span>Click here</span> to use the form.</a>
+                                                                <a class="contact-modal-launcher"><span><a href="https://dz49.co/contact-us">Click here</span> to use the form.</a>
                                                             </p>
                                                         </div><!-- page TXT end -->
                                                     </div><!-- post txt end -->
