--- a/index.html
+++ b/index.html
@@ -1696,10 +1696,16 @@
                                                         <div class="inner-divider-large"></div><!-- divider end -->
                                                         <!-- page TXT start -->
                                                         <div class="section-intro">
-    <p>
-        <button class="contact-modal-launcher btn btn-primary"><a href="https://dz49.co/contact-us">Click here</a></button>
-    </p>
-</div>
+                                                            <p>
+                                                                <a class="contact-modal-launcher"><span><a href="https://dz49.co/contact-us">Click here</span> to use the form.</a>
+                                                            </p>
+                                                        </div><!-- page TXT end -->
+                                                    </div><!-- post txt end -->
+                                                </div>
+                                            </div><!-- post item 2 end -->
+                                        </div><!-- col end -->
+                                    </div><!-- post block end -->
+                                    <!-- post block start -->
                                     <div class="post-block-second">
                                         <!-- mobile divider start -->
                                         <div class="inner-divider-mobile"></div><!-- mobile divider end -->
