--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                                 <div class="swiper-slide-txt-inner">
                                                     <!-- page subtitle start -->
                                                     <h4 class="post-heading post-heading-all post-heading-slide">
-                                                        <a href="https://www.dz49.com">DZ49.COM</a>
+                                                        <a href="https://www.dz49.co">DZ49.COM</a>
                                                     </h4><!-- page subtitle end -->
                                                     <!-- divider start -->
                                                     <div class="inner-divider-half"></div><!-- divider end -->
