--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        Boost your restaurant's online presence with our custom-built websites designed to. <a class="link-underline" href="#">attract and retain customers</a>.
+                                                        Boost your restaurant's online presence & <a class="link-underline" href="#">attract more customers</a>.
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
