--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                                     <div class="inner-divider"></div><!-- divider end -->
                                                     <!-- page TXT start -->
                                                     <p>
-                                                        A company designed to custom build your <a class="link-underline" href="#">website</a>.
+                                                        <a href="https://dz49.co/3-build-a-website">A company designed to custom build your</a><a class="link-underline" href="https://dz49.co/3-build-a-website">website</a>.
                                                     </p><!-- page TXT end -->
                                                 </div>
                                                 <div class="clearfix"></div>
