--- a/index.html
+++ b/index.html
@@ -115,10 +115,7 @@
                                 <a class="link-underline-menu" href="#about">About</a>
                             </li>
                             <li>
-                                <a class="link-underline-menu" href="#services">Services</a>
-                            </li>
-                            <li>
-                                <a class="link-underline-menu" href="#works">Images</a>
+                                <a class="link-underline-menu" href="#works">Live Sites</a>
                             </li>
                             <li>
                                 <a class="link-underline-menu" href="#contact">Contact</a>
