--- a/index.html
+++ b/index.html
@@ -877,14 +877,14 @@
                                 <!-- page title start -->
                                 <div class="page-title-content page-title-all">
                                     <h1 class="post-title post-title-all-main-title">
-                                        Images
+                                        Live
                                     </h1>
                                 </div><!-- page title end -->
                                 <!-- divider start -->
                                 <div class="inner-divider-half"></div><!-- divider end -->
                                 <!-- page subtitle start -->
                                 <h2 class="section-heading">
-                                    <span>03.</span> Coming soon!
+                                    <span>02.</span> Websites
                                 </h2><!-- page subtitle end -->
                                 <!-- divider start -->
                                 <div class="inner-divider-large"></div><!-- divider end -->
@@ -917,13 +917,13 @@
                                                             <div class="works-item-size-FIX">
                                                                 <!-- section title start -->
                                                                 <h3>
-                                                                    New York
+                                                                    Jagsdetail.com
                                                                 </h3><!-- section title end -->
                                                                 <!-- divider start -->
                                                                 <div class="inner-divider-ultra-half"></div><!-- divider end -->
                                                                 <!-- section subtitle start -->
                                                                 <div class="works-description-second">
-                                                                    Image Gallery
+                                                                    <a href="https://www.jagsdetail.com">jagsdetail.com</a>
                                                                 </div><!-- section subtitle end -->
                                                             </div><!-- post item end --></a><!-- post item link end -->
                                                              <!-- post item list start -->
