--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
                                                             <div class="works-item-size-FIX">
                                                                 <!-- section title start -->
                                                                 <h3>
-                                                                    Jagsdetail.com
+                                                                    View
                                                                 </h3><!-- section title end -->
                                                                 <!-- divider start -->
                                                                 <div class="inner-divider-ultra-half"></div><!-- divider end -->
