--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@
                                                         <!-- post item description start -->
                                                         <div class="works-description">
                                                             <!-- post item link start -->
-                                                            <a data-lity="" href=""><!-- post item start -->
+                                                            <a href="img/works/works-gallery/gallery-1/gallery-1-2.jpg" title="Gallery 1 / Image description 1"><!-- post item start -->
                                                             <div class="works-item-size-FIX">
                                                                 <!-- section title start -->
                                                                 <h3>
