--- a/index.html
+++ b/index.html
@@ -940,13 +940,13 @@
                                                     <div class="inner-divider-ultra-half"></div><!-- divider end -->
                                                     <!-- page subtitle start -->
                                                     <h4 class="post-heading post-heading-all post-heading-all-lead">
-                                                        Image Gallery
+                                                        Detail Company
                                                     </h4><!-- page subtitle end -->
                                                     <!-- divider start -->
                                                     <div class="inner-divider-ultra-half"></div><!-- divider end -->
                                                     <!-- page title start -->
                                                     <div class="post-title post-title-team">
-                                                        New York
+                                                        <a href="https://www.jagsdetail.com">Jagsdetail.com</a>
                                                     </div><!-- page title end -->
                                                 </div><!-- post item description mobile end -->
                                             </div><!-- works item 1 end -->
@@ -979,7 +979,6 @@
                                                                 <div class="works-description-second">
                                                                     DZ49.COM
                                                                 </div><!-- section subtitle end -->
-                                                                <br><br/>
                                                             </div><!-- post item end --></a><!-- post item link end -->
                                                              <!-- divider start -->
                                                             <div class="inner-divider-ultra-half"></div><!-- divider end -->
@@ -991,13 +990,13 @@
                                                     <div class="inner-divider-ultra-half"></div><!-- divider end -->
                                                     <!-- page subtitle start -->
                                                     <h4 class="post-heading post-heading-all post-heading-all-lead">
-                                                        YouTube Video
+                                                        Web Design Company
                                                     </h4><!-- page subtitle end -->
                                                     <!-- divider start -->
                                                     <div class="inner-divider-ultra-half"></div><!-- divider end -->
                                                     <!-- page title start -->
                                                     <div class="post-title post-title-team">
-                                                        Berlin
+                                                        <a href="https://www.dz49.com">dz49.com</a>
                                                     </div><!-- page title end -->
                                                 </div><!-- post item description mobile end -->
                                             </div><!-- works item 2 end -->
